--- a/luna-framework.css
+++ b/luna-framework.css
@@ -1,4 +1,7 @@
-/* Main Styling */
+/* 
+/* Main Styling 
+/* * * * * * * * * */
+
 body {
     position: relative;
     overflow-x: hidden;
@@ -16,14 +19,14 @@ footer {
     width: 100%;
     background-color: #222;
     text-align: center;
+    font-size: 15px;
 }
-footer a {
-    color: #aaa;
-    transition: 0.2s;
+footer .md {
+    margin-left: 5px;
+    margin-right: 5px;
 }
-footer a:hover {
-    color: #ccc;
-}
+
+/* Inputs and Form Elements */
 button, input, textarea {
     border: none;
     transition: 0.2s ease-in-out;
@@ -35,9 +38,20 @@ button, input[type=button], input[type=submit], input[type=reset] {
     padding-right: 35px;
     border-radius: 5px;
     background-color: #2a2a2a;
+    box-shadow: 0 8px 6px -2px #151616;
 }
-button:hover, input[type=button]:hover, input[type=submit]:hover {
+button:hover, input[type=button]:hover {
     background-color: #353535;
+}
+input[type=submit] {
+    background-color: #008cff;
+    cursor: pointer;
+}
+input[type=submit]:hover {
+    background-color: #00a2ff;
+}
+input[type=text] {
+    box-shadow: 0 8px 6px -2px #151616;
 }
 button, input[type=button] {
     cursor: pointer;
@@ -45,24 +59,45 @@ button, input[type=button] {
 input:focus, textarea:focus {
     outline: none;
 }
+
+/* DOM Elements */
+h1 {
+    font-weight: 600;
+}
 p {
     line-height: 18px;
 }
 a {
+    color: #aaa;
+    transition: 0.2s;
     text-decoration: none;
+}
+a:hover {
+    color: #ccc;
 }
 hr {
     border: 1px solid #777;
 }
+
+/* Index-Main */
 .index-main {
     padding: 60px;
     padding-top: 70px;
     padding-bottom: 100px;
     max-width: 1300px;
 }
+.index-main p {
+    color: #999;
+}
+.index-main p a {
+    color: #cbcbcb;
+}
+.index-main p a:hover {
+    color: #ddd;
+}
 
 /* Navbar */
-nav {
+.navbar {
     position: absolute;
     display: flex;
     align-items: center;
@@ -72,12 +107,21 @@ nav {
     height: 52px;
     width: 100%;
 }
-nav ul {
+.nav-container {
+    display: flex;
+    width: 100%;
+}
+.nav-centered {
+    margin: auto;
+    max-width: 1400px;
+    height: 54px;
+}
+.navbar-ul {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
 }
-nav ul li {
+.navbar-ul li {
     display: inline-flex;
     list-style-type: none;
     font-size: 15px;
@@ -240,6 +284,31 @@ nav ul li {
     width: 1px;
 }
 
+/* Pres & Code Blocks */
+pre {
+    padding-left: 30px;
+    border-radius: 5px;
+    max-width: 700px;
+    background-color: #222831;
+}
+
+/* CSS Styles */
+.pre-title {
+    color: rgb(207, 179, 121);
+}
+.pre-variable {
+    color: rgb(157, 220, 254);
+}
+.pre-variable-value {
+    color: rgb(182, 206, 168);
+}
+.pre-variable-special {
+    color: rgb(221, 220, 170);
+}
+.pre-comment {
+    color: rgb(107, 153, 85);
+}
+
 
 
 /* Media Querys */
@@ -248,8 +317,8 @@ nav ul li {
 @media screen and (max-width: 1000px) {
 
     /* Navbar */
-    nav {
-        background-color: #111;
+    .navbar {
+        background-color: #090909;
     }
     .navbar-toggler {
         display: block;
@@ -258,9 +327,6 @@ nav ul li {
         margin-left: auto;
         margin-right: auto;
     }
-    .nav-brand a {
-        margin-left: -25px;
-    }
     .collapsible {
         position: absolute;
         top: 56px;
@@ -268,7 +334,7 @@ nav ul li {
         max-height: 0;
         width: calc(100% - 2rem);
     }
-    nav ul {
+    .navbar ul {
         display: block;
     }
     .nav-right {
@@ -276,7 +342,7 @@ nav ul li {
         align-self: flex-start;
         padding-right: 2rem;
     }
-    nav ul li {
+    .navbar ul li {
         display: block;
         margin-bottom: 15px;
     }
